@@ -823,6 +823,7 @@ argument_list|(
 name|retCols
 argument_list|)
 expr_stmt|;
+return|return;
 block|}
 catch|catch
 parameter_list|(
@@ -853,6 +854,33 @@ operator|=
 literal|true
 expr_stmt|;
 block|}
+name|forward
+argument_list|(
+name|nullCols
+argument_list|)
+expr_stmt|;
+return|return;
+block|}
+catch|catch
+parameter_list|(
+name|Throwable
+name|e
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|error
+argument_list|(
+literal|"JSON parsing/evaluation exception"
+operator|+
+name|e
+argument_list|)
+expr_stmt|;
+name|forward
+argument_list|(
+name|nullCols
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 annotation|@
